split remote and base modules
- This should allow setups where socket.io dependency is not desired to just delete the remote module and still use the base module (e.g. tensorflow native MP build)

--- a/MachineLearningRemote.uplugin
+++ b/MachineLearningRemote.uplugin
@@ -15,6 +15,11 @@
 	"Installed": false,
 	"Modules": [
 		{
+			"Name": "MachineLearningBase",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		},
+		{
 			"Name": "MachineLearningRemote",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
