--- a/.gitignore
+++ b/.gitignore
@@ -75,5 +75,5 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
-Server/*
+Server/python*
 !Server/ServerReadme.md
